tests/ui/inline-const/cross_const_control_flow.stderr
error[E0767]: use of unreachable label `'a`
  --> $DIR/cross_const_control_flow.rs:9:25
   |
LL |     'a: { const { break 'a } }
   |     --                  ^^ unreachable label `'a`
   |     |
   |     unreachable label defined here
   |
   = note: labels are unreachable through functions, closures, async blocks and modules

error[E0767]: use of unreachable label `'a`
  --> $DIR/cross_const_control_flow.rs:22:28
   |
LL |     'a: { const { continue 'a } }
   |     --                     ^^ unreachable label `'a`
   |     |
   |     unreachable label defined here
   |
   = note: labels are unreachable through functions, closures, async blocks and modules

error[E0268]: `break` outside of a loop or labeled block
  --> $DIR/cross_const_control_flow.rs:9:19
   |
LL |     'a: { const { break 'a } }
   |                   ^^^^^^^^ cannot `break` outside of a loop or labeled block

error[E0268]: `break` outside of a loop or labeled block
  --> $DIR/cross_const_control_flow.rs:16:17
   |
LL |         const { break }
   |                 ^^^^^ cannot `break` outside of a loop or labeled block

error[E0268]: `continue` outside of a loop
  --> $DIR/cross_const_control_flow.rs:22:19
   |
LL |     'a: { const { continue 'a } }
   |                   ^^^^^^^^^^^ cannot `continue` outside of a loop

error[E0268]: `continue` outside of a loop
  --> $DIR/cross_const_control_flow.rs:29:17
   |
LL |         const { continue }
   |                 ^^^^^^^^ cannot `continue` outside of a loop

error[E0627]: yield expression outside of coroutine literal
  --> $DIR/cross_const_control_flow.rs:35:22
   |
LL |     const { async {}.await }
   |                      ^^^^^

error[E0308]: mismatched types
  --> $DIR/cross_const_control_flow.rs:35:22
   |
LL |   async fn await_across_const_block() {
   |  _____________________________________-
LL | |     const { async {}.await }
   | |                      ^^^^^ expected `ResumeTy`, found `()`
LL | |
LL | |
LL | | }
   | |_- expected due to this parameter type

error[E0572]: return statement outside of function body
  --> $DIR/cross_const_control_flow.rs:4:13
   |
LL | / fn foo() {
LL | |     const { return }
   | |     --------^^^^^^-- the return is part of this body...
LL | |
LL | | }
   | |_- ...not the enclosing function body

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0268, E0308, E0572, E0627, E0767.
For more information about an error, try `rustc --explain E0268`.
